<resources>
    <string name="app_name">Good Food</string>
    <string name="Dinnerofteenejager">Варианты обедов для вас: Икра из кабачков, суп овощной со сметаной, каша гречневая, печень тушеная, кисель яблочный, хлеб или борщ постный, одно вареное всмятку яйцо, картофель запечённый, капустный салат с оливковым маслом.</string>
    <string name="_2_1_2_1_200_1_160_60">Варианты завтраков для вас: варёные яйца (2 шт) + овсянка (½ чашки) + апельсин (1 шт) или овсянка на молоке (200 гр) + цельнозерновой хлеб с маслом (1 шт), или глазунья (160 гр) + бутерброд с авокадо и творожным сыром (60 гр)</string>
    <string name="_260_250_240_200_270">Варианты обедов для вас: плов с курицей 260 (гр) + овощной салат со сметаной (250 гр) или тушеная треска (240 гр) + булгур (200 гр) + салат греческий (270 гр)</string>
    <string name="_230_200_200_200_200_1">Варианты ужинов для вас: салат (230 гр) + курица гриль в духовке (200 гр) + отварные макароны (200 гр) или отварное куриное филе (200 гр) + салат (200 гр) + цельнозерновой хлеб (1 шт)</string>
    <string name="Omff">Ваш образ жизни:</string>
    <string name="man">Мужчина</string>
    <string name="woman">Женщина</string>
    <string name="nexty">Далее</string>
    <string name="weight">Вес</string>
    <string name="tsall">Рост</string>
    <string name="ageofme">Введите возраст</string>
    <string name="active">Активный</string>
    <string name="middleactive">Умеренно активный</string>
    <string name="passive">Сидячий</string>
</resources>